Fixed alignments and image spacing

--- a/public/css/herostyles.css
+++ b/public/css/herostyles.css
@@ -416,6 +416,9 @@
     top: 5vh !important;
     right: -5vw !important;
   }
+  .hero__content__banner_slogan{
+    margin-top: -30px !important;
+  }
   
 }
 @media(max-width: 1300px) and (min-width: 1024px){
@@ -423,6 +426,9 @@
     position: relative;
     top: 5vh !important;
     right: -5vw !important;
+  }
+  .hero__content__banner_slogan{
+    margin-top: -15px !important;
   }
 }
 
@@ -434,7 +440,11 @@
     transform: scale(1.3);
   }
   .hero__content__banner_slogan{
+    margin-top: -5vh !important;
     margin-left: 0 !important;
+  }
+  .chat{
+    margin-top: 20vh !important;
   }
 }
 @media (max-width: 850px) and (min-width: 600px) {
@@ -445,7 +455,11 @@
     transform: scale(1.3);
   }
   .hero__content__banner_slogan{
+    margin-top: -5vh !important;
     margin-left: 0 !important;
+  }
+  .chat{
+    margin-top: 25vh !important;
   }
 }
 @media (max-width: 600px) and (min-width: 425px) {
